--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Social Network for web developers",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
+    "start": "NODE_ENV=production node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
