--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "formik": "^2.0.6",
+    "i18next": "^19.0.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.2.5",
     "react-moment": "^0.9.6",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -39,5 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "prettier": "1.19.1"
+  }
 }
