--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "config": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.6",
     "express-validator": "^5.3.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
     "mongoose": "^5.7.13",
     "prettier": "^1.19.1",
     "request": "^2.88.0"
